# vt100-data-hub

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: config.toml
app/: Responsible_Pace_Chart.py  Returning_Runners.py  main.py
app/pages/: 1_Returning_Runners.py  2_Finishers_of_Both_Distances.py  Finishers_of_Both_Distances.py  Pace_Planner.py  Responsible_Pace_Chart.py
data/: cutoffs_2026_100k.csv  cutoffs_2026_100m.csv  vt100.db
docs/: CUTOFF_VERIFICATION.md  PROJECT_OVERVIEW.md
scripts/: inspect_fixture.py  populate_database.py  save_fixtures.py  verify_duv_event_ids.py
src/vt100_data_hub/: __init__.py  cutoffs.py  duv.py  duv_events.py  fetch_duv.py  formatting.py  pacing.py  queries.py  race_result.py  storage.py
tests/: test_cutoffs.py  test_data_pages.py  test_duv_events.py  test_duv_parser.py  test_event_id_verifier.py  test_fixture_saver.py  test_formatting.py  test_pace_page.py  test_pacing.py  test_populate_database.py  test_queries.py  test_storage.py
tests/fixtures/: duv_2017_100m.html  duv_2018_100k.html  duv_2024_100m.html
