[project]
name = "vt100-data-hub"
version = "0.1.0"
description = "Tools for the Vermont 100 Endurance Race: results aggregation, runner history, and an interactive pace chart planner."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Adam Wermus", email = "amwermus@gmail.com" }
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vt100_data_hub"]