[project]
name = "vt100-data-hub"
version = "0.1.0"
description = "Tools for the Vermont 100 Endurance Race: results aggregation, runner history, and an interactive pace chart planner."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Adam Wermus", email = "amwermus@gmail.com" }
]
dependencies = [
    "beautifulsoup4>=4.14.3",
    "requests>=2.33.1",
    "streamlit>=1.40.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vt100_data_hub"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
pythonpath = ["scripts"]
